# irbasis

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.TXT  README.md
c++/: irbasis.hpp
cmake/: EnableTests.cmake
database/: irbasis.h5  make_h5.py  tnl_safe_ref.h5  unl_safe_ref.h5
doc/: unl.tex
python/: .#make_hdf5_sample_ir.py  CMakeLists.txt  __init__.py  irbasis.py  make_h5.py  requirements.txt  setup.py
sample/: api.cpp  api.py  compile.sh  computing_gl.cpp  computing_gl.py  giwn.py  gl.py  glwn.py  how_to_use_from_Julia.ipynb  run_all_python_scripts.sh  singular_values.ipynb  step_by_step_examples.cpp  step_by_step_examples.ipynb  trans.py  uv.py  zeros.ipynb
sample/issue14/: irbasis.h5  make_tnl_check.py  tnl_limit_check.py
sample/issue2/: make_hdf5_sample_ir.py  make_hdf5_sample_ir2.py
sample/issue3/: irbasis.h5  load.py  save.py
sample/issue4/: sampling.py
sample/issue8/: check_ulx_small.py
sample/nagai/: fit_Giw.py  regression.py
sample_deprecated/issue14/: tnl_limit_check.py
sample_deprecated/issue4/: rounderror.py  sampling.py
sample_deprecated/issue8/: basis_f-mp-Lambda10.0.txt  irbasis.h5  irbasis.py
sample_deprecated/nagai/: fit_Giw.py  gf.py
script/: gauss_legendre.py
test/: CMakeLists.txt
test/c++/: CMakeLists.txt  dummy.cpp  gtest-all.cc  gtest.h  hdf5.cpp  hdf5_test.h5  interpolation.cpp  mk_hdf5_test_h5.py  multi_array.cpp
test/python/: .gitignore  CMakeLists.txt  Tnl.py  check_Tnl.py  check_ulx_Lambda10.py  check_ulx_large.py  check_ulx_small.py  check_ulx_vly.py  check_unl.py  interpolation.py  sparse_sampling.py  unl.py  utility.py
test/python/ref/: make_tnl_safe.py  make_unl_safe.py  tnl_safe_ref.h5
test/python/ref_script/: make_ref.py  output_b-mp-Lambda10.0_ulx.csv  output_b-mp-Lambda10.0_vly.csv  output_b-mp-Lambda10000.0_ulx.csv  output_b-mp-Lambda10000.0_vly.csv  output_f-mp-Lambda10.0_ulx.csv  output_f-mp-Lambda10.0_vly.csv  output_f-mp-Lambda10000.0_ulx.csv  output_f-mp-Lambda10000.0_vly.csv  plot.py
test/python/ref_script/np10/: basis_b-mp-Lambda10.0.txt  basis_b-mp-Lambda10000.0.txt  basis_f-mp-Lambda10.0.txt  basis_f-mp-Lambda10000.0.txt
